# RAG-Agent-With-CrewAI

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  sow_agent_output_20250817_185034.md
outputs/: sow_agent_output_20250817_185558.html  sow_agent_output_20250817_185558.md
